Added radio option

--- a/locales/en.json
+++ b/locales/en.json
@@ -255,6 +255,7 @@
   "optionName": "Option name",
   "optionControl": "Option control",
   "optionControlSelect": "Drop-down list",
+  "optionControlRadio" : "Radio list",
   "optionValues": "Option values",
   "newOptionValue": "New value",
   "deleteProduct": "Delete product",
