--- a/locales/es.json
+++ b/locales/es.json
@@ -189,18 +189,18 @@
   "settings_addPage": "Add page",
   "settings_editPage": "Edit page",
   "settings_aboutDeletePage": "Will delete page {name}.",
-  "settings_tokens": "Personal access tokens",
-  "settings_editToken": "Edit personal access token",
-  "settings_addToken": "New personal access token",
-  "settings_tokenName": "Token name",
-  "settings_tokenExp": "Token expiration (hours)",
-  "settings_selectScopes": "Select scopes",
-  "settings_revokeAccess": "Revoke access",
-  "settings_generateToken": "Generate token",
-  "settings_tokenHelp": "Personal access tokens function like a combined name and password for API authentication.",
-  "settings_copyYourNewToken": "Make sure to copy your new personal access token now. You won’t be able to see it again!",
-  "settings_tokenRevokeTitle": "Are you sure you want to delete this token?",
-  "settings_tokenRevokeDescription": "Any applications or users using this token will no longer be able to access API or dashboard. You cannot undo this action.",
+  "settings_tokens": "Usuarios",
+  "settings_editToken": "Editar usuarios",
+  "settings_addToken": "Nuevo usuario",
+  "settings_tokenName": "Nombre del token",
+  "settings_tokenExp": "Token expira (horas)",
+  "settings_selectScopes": "Seleccionar permisos",
+  "settings_revokeAccess": "Revocar el acceso",
+  "settings_generateToken": "Generar token",
+  "settings_tokenHelp": "Los tokens de acceso personal funcionan como un nombre y una contraseña combinados para la autenticación de la API.",
+  "settings_copyYourNewToken": "Asegúrese de copiar su nuevo token de acceso personal ahora. ¡No podrás volver a verlo!",
+  "settings_tokenRevokeTitle": "¿Estás seguro de que quieres borrar este token?",
+  "settings_tokenRevokeDescription": "Cualquier aplicación o usuario que utilice este token ya no podrá acceder a la API o al panel de control. No se puede deshacer esta acción.",
   "drawer_title": "Menu",
   "drawer_home": "Home",
   "drawer_products": "Productos",
