--- a/locales/es.json
+++ b/locales/es.json
@@ -266,6 +266,7 @@
   "newOptionValue": "Nuevo valor",
   "deleteProduct": "Borrar producto",
   "domain": "Dominio",
+  "next_product": "Productos",
   "manageOrderStatuses": "Gestionar estados",
   "shippingAddress": "Dirección de envío",
   "billingAddress": "Dirección de facturación",
